--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -23,6 +23,8 @@ footer {
 
 }
 
+
+
 @media screen and (max-width: 1440px) {
 
     body {
@@ -38,16 +40,28 @@ footer {
             .imagenDelgp2 {
                 img {
                     display: flex;
-                    margin: -18px 238px 27px 700px;
+                    margin: -18px 238px 27px 720px;
                     width: 50%;
                     height: 50%;
                 }
 
             }
 
+            .portadaDeblog {
+                img {
+                    display: flex;
+                    width: 100%;
+                }
+            }
+
+
+            .ultimoGpdisputado {
+                margin-top: 2px;
+            }
+
             .textosDelgp {
                 display: flex;
-                margin: -418px -78px 176px 17px;
+                margin: -427px 0px 176px 17px;
                 width: -127px;
                 flex-direction: column;
 
@@ -63,7 +77,20 @@ footer {
             .imagenDelgp {
                 img {
                     display: flex;
-                    margin: 54px 238px 27px 700px;
+                    margin: 54px 238px 27px 720px;
+                    width: 50%;
+                    height: 50%;
+                }
+
+            }
+
+
+            .imagenDelgp3 {
+                display: none;
+
+                img {
+                    display: flex;
+                    margin: 54px 238px 27px 720px;
                     width: 50%;
                     height: 50%;
                 }
@@ -86,7 +113,7 @@ footer {
                 .box {
                     display: inline-flex;
                     background-color: gainsboro;
-                    margin: 53px 191px;
+                    margin: 38px 69px;
                     border-radius: 5px;
                     box-shadow: 5px 5px 15px gray;
                     overflow: hidden;
@@ -98,16 +125,47 @@ footer {
                 }
             }
 
+            .portadaDenoticias {
+                img {
+                    display: flex;
+                    width: 100%;
+                }
+            }
+
+            .imagenesParacontacto {
+                display: flex;
+                margin: 125px 2px 2px -270px;
+
+                .imagenDelnewslatter1 {
+                    margin: -628px -8px 109px 812px;
+                }
+
+                .imagenDelnewslatter2 {
+                    margin: -628px 2px 109px 24px;
+                }
+
+                .imagenDelnewslatter3 {
+                    margin: -628px 2px 116px 12px;
+                }
+
+                .imagenDelnewslatter4 {
+                    height: 50%;
+                    width: 50%;
+                    margin: -239px 2px 2px -937px;
+                }
+            }
+
             .boxblog {
                 display: inline-flex;
-                background-color: $color-cajas;
-                margin: 50px 50px 10px 233px;
+                background-color: gainsboro;
+                margin: 50px 30px 35px 43px;
                 border-radius: 5px;
                 overflow: hidden;
                 align-items: center;
-                width: 561px;
+                width: 428px;
                 justify-content: center;
                 padding: 16px;
+                height: auto;
 
                 img {
                     width: 733px;
@@ -129,7 +187,7 @@ footer {
                 justify-content: left;
                 width: 0px;
                 height: 552px;
-                margin: -579px 1090px 204px 554px;
+                margin: -579px 1090px 204px 756px;
 
 
             }
@@ -146,13 +204,18 @@ footer {
                 justify-content: left;
                 width: 0px;
                 height: 557px;
-                margin: -759px 938px 31px 896px
+                margin: -759px 938px 31px 1104px;
+            }
+
+            .tablaDepuntuacion {
+                display: flex;
+                margin: -133px 2px 2px 2px;
             }
 
             .boxNewslatter {
                 display: flex;
                 background-color: gainsboro;
-                margin: 40px 134px 10px 260px;
+                margin: 40px 134px 10px 23px;
                 border-radius: 5px;
                 overflow: hidden;
                 align-content: center;
@@ -264,25 +327,100 @@ footer {
                 }
             }
 
-            .boxblog {
-                display: inline-flex;
-                background-color: $color-cajas;
-                margin: 50px 50px 10px 233px;
-                border-radius: 5px;
-                overflow: hidden;
-                align-items: center;
-                width: 561px;
-                justify-content: center;
-                padding: 16px;
-
+            .imagenDelgp {
                 img {
-                    width: 733px;
-                    align-content: center;
-                    padding: -105px 5px 5px 5px;
-                    margin: 54px -202px 31px -165px;
-                    object-fit: contain;
+                    display: flex;
+                    margin: 54px 238px 27px 666px;
+                    width: 35%;
+                    height: 50%;
+                }
+
+            }
+
+            .imagenDelgp2 {
+                img {
+                    display: flex;
+                    margin: -18px 238px 27px 667px;
+                    width: 35%;
+                    height: 50%;
+                }
+
+            }
+
+            .textosDelgp {
+                display: flex;
+                margin: -237px 0px 176px 17px;
+                width: -127px;
+                flex-direction: column;
+
+                p {
+                    display: flex;
+                    margin: 10px 66px 2px 2px;
+                    text-align: left;
+                    width: 587px;
                 }
             }
+
+            .articulosDeblog {
+                display: flex;
+                margin: 2px -17px 38px 60px;
+
+
+                .boxblog {
+                    display: inline-flex;
+                    background-color: $color-cajas;
+                    margin: 50px 50px 10px -35px;
+                    border-radius: 5px;
+                    overflow: hidden;
+                    align-items: center;
+                    width: 561px;
+                    justify-content: center;
+                    padding: 16px;
+
+                    .tarjeta {
+                        margin: 2px 2px 2px 2px;
+
+                        h5 {
+                            margin: 2px 2px 2px 38px;
+                            height: 42px;
+                            width: 289px;
+                        }
+                    }
+
+                    .parrafoBlog1 {
+                        display: flex;
+                        margin: 2px 2px 16px 26px;
+                        flex-wrap: nowrap;
+                        width: 315px;
+                        height: 198px;
+                        overflow: hidden;
+                    }
+                    .parrafoBlog2 {
+                        display: flex;
+                        margin: 2px 2px 16px 26px;
+                        flex-wrap: nowrap;
+                        width: 315px;
+                        height: 198px;
+                        overflow: hidden;
+                    }
+                    .parrafoBlog3 {
+                        display: flex;
+                        margin: 2px 2px 16px 26px;
+                        flex-wrap: nowrap;
+                        width: 315px;
+                        height: 198px;
+                        overflow: hidden;
+                    }
+                    img {
+                        width: 733px;
+                        align-content: center;
+                        padding: -105px 5px 5px 5px;
+                        margin: 54px -202px 31px -165px;
+                        object-fit: contain;
+                    }
+                }
+            }
+
 
             .textoDelmain p {
                 display: flex;
