--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -18,9 +18,12 @@ main {
         text-align: center;
     }
 
+    
+
     .articulosDeblog {
         display: flex;
-margin: 2px 2px 2px 2px;
+        margin: 2px 2px 2px 2px;
+
         .boxblog {
             display: inline-flex;
             background-color: $color-cajas;
@@ -32,7 +35,13 @@ margin: 2px 2px 2px 2px;
             justify-content: center;
             padding: 16px;
             height: auto;
+            .tarjeta {
+                h5 {
+                    margin: 2px 2px 2px 27px;
+                }
+                margin: 2px 2px 2px 2px;
 
+            }
             .parrafoBlog1 {
                 @extend %parrafoBlog1;
 
