--- a/css/style.css
+++ b/css/style.css
@@ -690,6 +690,15 @@ footer .direccion2 {
   body main .imagenDelmain4 {
     display: none;
   }
+  body main .imagenesParacontacto .imagenDelnewslatter4,
+  body main .imagenesParacontacto .imagenDelnewslatter3,
+  body main .imagenesParacontacto .imagenDelnewslatter2 {
+    display: none;
+  }
+  body main .imagenesParacontacto .imagenDelnewslatter1 {
+    height: 503px;
+    margin: -628px -8px 109px 868px;
+  }
   body main .boxNewslatter {
     display: flex;
     background-color: gainsboro;
@@ -706,13 +715,6 @@ footer .direccion2 {
     text-align: center;
     margin: -51px -527px 340px -237px;
   }
-  body main .imagenesParacontacto {
-    display: flex;
-    margin: 125px 2px 2px -270px;
-  }
-  body main .imagenesParacontacto .imagenDelnewslatter1 {
-    margin: -628px -8px 109px 812px;
-  }
   body main .encabezadosDeseccion h1,
   body main .tituloDelapagina h1,
   body main .tituloDelapagina h2,
@@ -726,6 +728,13 @@ footer .direccion2 {
     display: flex;
     align-items: center;
     margin: 28px 114px;
+  }
+  body main .imagenesParacontacto {
+    display: flex;
+    margin: 125px 2px 2px -270px;
+  }
+  body main .imagenesParacontacto .imagenDelnewslatter1 {
+    margin: -628px -8px 109px 864px;
   }
   .tituloDelapagina {
     padding: 30px;
@@ -876,6 +885,42 @@ footer .direccion2 {
   body main .box img {
     max-width: 100%;
     object-fit: cover;
+  }
+  body main .encabezadosDeseccion h2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 22px;
+  }
+  body main .imagenDelgp2 img,
+  body main .imagenDelgp img {
+    display: none;
+  }
+  body main .textosDelgp {
+    display: flex;
+    margin: -237px 0px 176px 17px;
+    width: -127px;
+    flex-direction: column;
+    padding: 2px 2px 2px 2px;
+  }
+  body main .textosDelgp p {
+    width: 96%;
+    padding: 2px 2px 2px 2px;
+    display: flex;
+    flex-direction: column;
+    margin: 2px 2px 79px 2px;
+  }
+  body main .textoDelmain p {
+    display: flex;
+    width: 385px;
+    text-align: justify;
+    margin: 47px 2px 2px 14px;
+  }
+  body main .encabezadosDeseccion h1 {
+    display: flex;
+    width: 385px;
+    text-align: justify;
+    margin: 47px 2px 2px 26px;
   }
   body main .noticias {
     display: flex;
