--- a/css/style.css
+++ b/css/style.css
@@ -108,9 +108,8 @@ main p {
 
 main .articulosDeblog .boxblog .parrafoBlog3, main .articulosDeblog .boxblog .parrafoBlog2, main .articulosDeblog .boxblog .parrafoBlog1 {
   display: flex;
-  margin: 2px 2px 2px 2px;
+  margin: 2px 10px 2px 10px;
   flex-wrap: nowrap;
-  width: 327px;
   height: 206px;
   overflow: hidden;
 }
@@ -121,6 +120,11 @@ main .articulosDeblog {
 main h3 {
   text-align: center;
 }
+main .portadaDeblog img {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
 main .articulosDeblog {
   display: flex;
   margin: 2px 2px 2px 2px;
@@ -128,13 +132,13 @@ main .articulosDeblog {
 main .articulosDeblog .boxblog {
   display: inline-flex;
   background-color: gainsboro;
-  margin: 50px 50px 10px 107px;
+  margin: 50px 10px 10px 10px;
   border-radius: 5px;
   overflow: hidden;
   align-items: center;
-  width: 355px;
+  width: 455px;
   justify-content: center;
-  padding: 16px;
+  padding: 2px;
   height: auto;
 }
 main .articulosDeblog .boxblog .tarjeta {
@@ -163,19 +167,19 @@ main .tablaDepuntuacion {
 }
 main .imagenDelgp img {
   display: flex;
-  margin: -18px 238px 27px 1276px;
+  margin: -18px 238px 27px 950px;
   width: 50%;
   height: 50%;
 }
 main .imagenDelgp2 img {
   display: flex;
-  margin: -18px 238px 27px 1278px;
+  margin: -18px 238px 27px 950px;
   width: 50%;
   height: 50%;
 }
 main .imagenDelgp3 img {
   display: flex;
-  margin: -545px 2px 2px 945px;
+  margin: -545px 2px 2px 600px;
   width: 17%;
 }
 main .textosDelgp {
@@ -190,7 +194,7 @@ main .textosDelgp p {
   width: 720px;
 }
 
-main .imagenesParacontacto .imagenDelnewslatter1, main .imagenesParacontacto .imagenDelnewslatter2, main .imagenesParacontacto .imagenDelnewslatter3 {
+main .imagenesParacontacto .imagenDelnewslatter1 img, main .imagenesParacontacto .imagenDelnewslatter2 img, main .imagenesParacontacto .imagenDelnewslatter3 img {
   display: flex;
   height: 376px;
 }
@@ -205,13 +209,13 @@ main .imagenesParacontacto .imagenDelnewslatter4 {
   width: 50%;
   margin: -239px 2px 2px -937px;
 }
-main .imagenesParacontacto .imagenDelnewslatter3 {
+main .imagenesParacontacto .imagenDelnewslatter3 img {
   margin: -628px 2px 116px 12px;
 }
-main .imagenesParacontacto .imagenDelnewslatter2 {
+main .imagenesParacontacto .imagenDelnewslatter2 img {
   margin: -628px 2px 109px 24px;
 }
-main .imagenesParacontacto .imagenDelnewslatter1 {
+main .imagenesParacontacto .imagenDelnewslatter1 img {
   margin: -628px -8px 109px 812px;
 }
 
