--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -2,9 +2,8 @@ $color-cajas: gainsboro;
 
 %parrafoBlog1 {
     display: flex;
-    margin: 2px 2px 2px 2px;
+    margin: 2px 10px 2px 10px;
     flex-wrap: nowrap;
-    width: 327px;
     height: 206px;
     overflow: hidden;
 }
@@ -18,7 +17,15 @@ main {
         text-align: center;
     }
 
-    
+    .portadaDeblog {
+        img {
+
+            display: flex;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
 
     .articulosDeblog {
         display: flex;
@@ -27,21 +34,25 @@ main {
         .boxblog {
             display: inline-flex;
             background-color: $color-cajas;
-            margin: 50px 50px 10px 107px;
+            margin: 50px 10px 10px 10px;
             border-radius: 5px;
             overflow: hidden;
             align-items: center;
-            width: 355px;
+            width: 455px;
             justify-content: center;
-            padding: 16px;
+            padding: 2px;
             height: auto;
+
+
             .tarjeta {
                 h5 {
                     margin: 2px 2px 2px 27px;
                 }
+
                 margin: 2px 2px 2px 2px;
 
             }
+
             .parrafoBlog1 {
                 @extend %parrafoBlog1;
 
